--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,4 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  box-sizing: border-box;
+  height: 100%;
 }
